<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_layout_background"
    tools:context=".presentation.tabs.manager.detailsmanager.DetailsManagerFragment">

    <TextView
        android:id="@+id/textField1"
        android:text="@string/shipper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        style="@style/textViewTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewShipper"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@color/card_view_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField1"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shipperRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addShipperButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="5dp"
            android:layout_marginVertical="16dp"
            android:clickable="true"
            android:foregroundGravity="center"
            android:onClick="onShipperAddClick"
            android:src="@drawable/ic_add" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textField2"
        style="@style/textViewTitle"
        android:text="@string/consignees"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewShipper"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@color/card_view_background"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField2"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/consigneeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addConsigneesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="5dp"
            android:clickable="true"
            android:defaultFocusHighlightEnabled="false"
            android:foregroundGravity="center"
            android:onClick="onConsigneeAddClick"
            android:src="@drawable/ic_add" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:onClick="findRoute"
        android:text="@string/route"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/BusImg"
        android:layout_width="103dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_bus" />

    <EditText
        android:id="@+id/inputLimitBus"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="мах.гр.(кг)"
        android:inputType="number|numberDecimal"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BusImg" />



</androidx.constraintlayout.widget.ConstraintLayout>